Signed-off-by: stefanie <374935367@qq.com>

--- a/WebRoot/index/index.html
+++ b/WebRoot/index/index.html
@@ -7,9 +7,9 @@
 <title>西藏旅游数据中心</title>
 <link rel="shortcut icon" href="favicon.ico"/>
 <link href="../css/bootstrap.min.css" rel="stylesheet"/>
-<link href="../css/css_seller/font-awesome.css" rel="stylesheet"/>
-<link href="../css/css_seller/animate.css" rel="stylesheet"/>
-<link href="../css/css_seller/style.css" rel="stylesheet"/>
+<link href="../css/font-awesome.css" rel="stylesheet"/>
+<link href="../css/animate.css" rel="stylesheet"/>
+<link href="../css/style.css" rel="stylesheet"/>
 <!-- 全局js -->
 <script type="text/javascript" src="../js/library/jquery-1.7.2.js"></script>	
 <script type="text/javascript" src="../js/library/cookie/jquery.cookie.js"></script>
