--- a/WebRoot/index/lefter.html
+++ b/WebRoot/index/lefter.html
@@ -1,7 +1,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
 
 <script type="text/javascript" src="../js/library/layer/layer.js"></script>	
-<script type='text/javascript' src='../js/js_seller/index/lefter.js' ></script>
+<script type='text/javascript' src='../js/index/lefter.js' ></script>
 
 <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="nav-close"><i class="fa fa-times-circle"></i></div>
