--- a/WebRoot/security/userManager.html
+++ b/WebRoot/security/userManager.html
@@ -24,7 +24,7 @@
 <script type="text/javascript" src="../js/library/switchery/switchery.js" ></script>	
 <script type="text/javascript" src="../js/library/common/commonUi.js" defer="defer"></script>
 
-<script type="text/javascript" src="../../js/security/userManager.js" defer="defer"></script>	
+<script type="text/javascript" src="../js/security/userManager.js" defer="defer"></script>	
 
 </head>
 <body class="gray-bg">
