--- a/WebRoot/login.html
+++ b/WebRoot/login.html
@@ -10,7 +10,7 @@
 <meta http-equiv="refresh" content="0; url=ie.html" />
 <![endif]-->
 
-<title>西藏旅游数据中心</title>
+<title>数据中心</title>
 <link rel="shortcut icon" href="http://www.aidaxiang.cn/favicon.ico"/>
 <link href="css/bootstrap.min.css" rel="stylesheet"/>
 <link href="css/font-awesome.css" rel="stylesheet"/>
@@ -35,7 +35,7 @@
                 <h1 class="logo-name"></h1>
 
             </div>
-            <h3>西藏旅游数据中心平台</h3>
+            <h3>数据中心平台</h3>
 
                 <div class="form-group">
                     <input id="username" type="text" class="form-control" placeholder="用户名" />
