--- a/WebRoot/data/lessonManager.html
+++ b/WebRoot/data/lessonManager.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>西藏旅游数据中心</title>
+<title>数据中心</title>
 <meta name="Keywords" content=""/>
 <meta name="Description" content=""/>
 <link href="../css/bootstrap.min.css" rel="stylesheet"/>
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="../js/library/cookie/jquery.cookie.js"></script>
 <script type="text/javascript" src="../js/library/common/cookie.js"></script>
 <script type="text/javascript" src="../js/library/layer/layer.js"></script>	
+<script type="text/javascript" src="../js/library/laydate/laydate.js"></script>	
 <script type="text/javascript" src="../js/library/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../js/library/bootstrap/js/bootstrap-suggest.min.js"></script>
 <script type="text/javascript" src="../js/library/bootstrap-table/bootstrap-table.min.js"></script>
