Signed-off-by: CQLiB <849425896@qq.com>

--- a/WebRoot/login.html
+++ b/WebRoot/login.html
@@ -45,7 +45,7 @@
                 </div>
                 <button id="loginButton" class="btn btn-primary block full-width m-b">登 录</button>
 
-                <p class="text-muted text-center"> <a href="#"><small>忘记密码了？</small></a> | <a href="#">注册一个新账号</a>
+                <p class="text-muted text-center"> <a href="#"><small>忘记密码了</small></a> | <a href="#">注册一个新账号</a>
                 </p>
 
    
